<resources>
    <string name="app_name">APMPilot</string>

    <string name="action_connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_connection">Connection</string>
    <string name="pref_header_video">Display</string>
    <string name="pref_header_joystick">Joystick</string>

    <string name="pref_title_protocol">Protocol</string>
    <string-array name="list_pref_protocol">
        <item>UDP</item>
        <item>TCP</item>
        <item>USB</item>
    </string-array>

    <string name="pref_title_udp_port">UDP Port</string>
    <string name="pref_default_udp_port">14550</string>

    <string name="pref_title_tcp_host">TCP Host</string>
    <string name="pref_default_tcp_host"></string>

    <string name="pref_title_tcp_port">TCP Port</string>
    <string name="pref_default_tcp_port"></string>

    <string name="pref_title_usb_baud_rate">USB Baud Rate</string>
    <string name="pref_default_usb_baud_rate"></string>

    <string name="pref_title_manual_mode">Manual Mode</string>
    <string-array name="list_pref_manual_mode_label">
        <item>RC Override</item>
        <item>MAVLink Manual Control</item>
    </string-array>
    <string-array name="list_pref_manual_mode_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_throttle_mode_gamepad">Gamepad Mode</string>
    <string name="pref_summary_throttle_mode_gamepad_on">Move stick up/down to increase/decrease throttle</string>
    <string name="pref_summary_throttle_mode_gamepad_off">Throttle reflects stick position</string>

    <string name="pref_title_throttle_center_zero">Throttle Center Zero</string>
    <string name="pref_summary_throttle_center_zero_on">Zero value when throttle stick on center</string>
    <string name="pref_summary_throttle_center_zero_off">Zero value when throttle stick fully down</string>

    <string name="pref_title_joystick_button_a">Button A</string>
    <string name="pref_title_joystick_button_b">Button B</string>
    <string name="pref_title_joystick_button_x">Button X</string>
    <string name="pref_title_joystick_button_y">Button Y</string>

    <string name="pref_title_display_mode">Display Mode</string>
    <string-array name="list_pref_display_mode_label">
        <item>Google Map</item>
        <item>UDP Video</item>
    </string-array>
    <string-array name="list_pref_display_mode_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_udp_video_port">UDP Video Port</string>
    <string name="pref_default_udp_video_port">5000</string>

    <string name="pref_title_gimbal_accelerometer">Accelerometer Gimbal Control</string>
    <string name="pref_summary_gimbal_accelerometer_on">Gimbal control using accelerometer</string>
    <string name="pref_summary_gimbal_accelerometer_off">Gimbal control using hat buttons</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
