<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:title="@string/pref_title_display_mode"
        android:entries="@array/list_pref_display_mode_label"
        android:entryValues="@array/list_pref_display_mode_value"
        android:key="pref_display_mode" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_udp_video_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_udp_video_port"
        android:key="pref_udp_video_port" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/pref_title_gimbal_accelerometer"
        android:key="pref_gimbal_accelerometer"
        android:summaryOn="@string/pref_summary_gimbal_accelerometer_on"
        android:summaryOff="@string/pref_summary_gimbal_accelerometer_off" />

</PreferenceScreen>
